--- a/student_profile/templates/profile/student_profile.html
+++ b/student_profile/templates/profile/student_profile.html
@@ -20,17 +20,19 @@
       <div class="col-md-8" style="margin-top: 2rem; margin-bottom: 3rem; font-size: 14px;">
         <div class="card text-center">
               <div class="text-center">
+                {% if user.studentprofile %}
                 <img class="rounded-circle" src="{{ user.studentprofile.profile_picture.url }}" class="card-img-top" alt="Profile Picture"
                 style="max-width: 10rem; min-width: 10rem; position: relative; ">
                </div>
 
             <div class="card-header">
                 <h5 class="card-title"><img src="{% static 'icons/user-icon.png' %}" style="width: 20px; margin-right: 5px; margin-bottom: 4px;">{{ user.studentprofile.last_name }},
-                     {{user.studentprofile.first_name }} {{ user.studentprofile.middle_name }}
+                     {{user.studentprofile.first_name }} {{ user.studentprofile.middle_name }}<a class='updateprofile text-primary' data-id="{% url 'profile:student-update-profile' user.studentprofile.pk %}" style="font-size: 13px; margin-bottom: 16px; margin-left: 2px"><i class="fas fa-pen" aria-hidden="false"></i>&nbsp</a>
                    </h5>
 
               <p class="text-muted text-center"><img src="{% static 'icons/email.png' %}" style="width: 20px; margin-right: 5px; margin-bottom: 3px;">{{ user.studentprofile.email }}</p>
               <p class="card-text">"{{ user.studentprofile.bio }}"</p>
+              {% endif %}
               <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
                   <a class="nav-link active" href="#">Info</a>
@@ -54,6 +56,7 @@
             <div class="card-body " >
 
                 <ul class="list-group">
+                  {% if user.studentprofile %}
                     <li class="list-group-item d-flex align-items-center"><img src="{% static 'icons/address.png' %}" style="width: 30px;"> {{ user.studentprofile.address }}</li>
                     <li class="list-group-item d-flex  align-items-center"><img src="{% static 'icons/birthday.png' %}" style="width: 30px;"> {{ user.studentprofile.birthday }}</li>
                     <li class="list-group-item d-flex align-items-center"><img src="{% static 'icons/age-icon.png' %}" style="width: 30px;">{{ user.studentprofile.age }} years old</li>
@@ -65,7 +68,15 @@
                     <li class="list-group-item d-flex align-items-center"><img src="{% static 'icons/program.png' %}" style="width: 30px;">{{ user.studentprofile.program }}</li>
                     <li class="list-group-item d-flex  align-items-center"><img src="{% static 'icons/section.png' %}" style="width: 30px;">{{ user.studentprofile.section }}</li>
                     <li class="list-group-item d-flex align-items-center"><img src="{% static 'icons/student_id.png' %}" style="width: 30px;">{{ user.studentprofile.student_id }}</li>
+                    {% else %}
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="display-5">You don't have any profile yet</h5>
+                        <h5 class='display-5'>Create your profile <a class="create-profile text-primary text-decoration-none">here...</a></h5>
+                      </div>
 
+                    </div>
+                    {% endif %}
                   </ul>
 
 
@@ -108,3 +119,4 @@
     });
   </script>
 {% endblock extrascripts %}
+
