--- a/student_profile/templates/profile/student_taken_quiz.html
+++ b/student_profile/templates/profile/student_taken_quiz.html
@@ -15,25 +15,26 @@
 
       <div class="col-md-8" style="margin-top: 1rem; margin-bottom: 3rem; font-size: 14px;">
         <div class="card text-center">
-               <div class="text-center">
-                <img class="rounded-circle" src="{{ user.studentprofile.profile_picture.url }}" class="card-img-top" alt="Profile Picture"
-                style="max-width: 10rem; min-width: 10rem; position: relative; ">
-               </div>
-                <div class="card-body">
+          <div class="text-center">
+            {% if user.studentprofile %}
+            <img class="rounded-circle" src="{{ user.studentprofile.profile_picture.url }}" class="card-img-top" alt="Profile Picture"
+            style="max-width: 10rem; min-width: 10rem; position: relative; ">
+           </div>
 
-                </div>
+        <div class="card-header">
+            <h5 class="card-title"><img src="{% static 'icons/user-icon.png' %}" style="width: 20px; margin-right: 5px; margin-bottom: 4px;">{{ user.studentprofile.last_name }},
+                 {{user.studentprofile.first_name }} {{ user.studentprofile.middle_name }}<a class='updateprofile text-primary' data-id="{% url 'profile:student-update-profile' user.studentprofile.pk %}" style="font-size: 13px; margin-bottom: 16px; margin-left: 2px"><i class="fas fa-pen" aria-hidden="false"></i>&nbsp</a>
+               </h5>
 
-            <div class="card-header">
-                <h5 class="card-title"><img src="{% static 'icons/user-icon.png' %}" style="width: 20px; margin-right: 5px; margin-bottom: 4px;">{{ user.studentprofile.last_name }},
-                   {{user.studentprofile.first_name }} {{ user.studentprofile.middle_name }}<a href="" style="font-size: 13px;"><i class="fas fa-pen" aria-hidden="false"></i></a></h5>
-              <p class="text-muted text-center"><img src="{% static 'icons/email.png' %}" style="width: 20px; margin-right: 5px; margin-bottom: 3px;">{{ user.studentprofile.email }}</p>
-              <p class="card-text">"{{ user.studentprofile.bio }}"</p>
+          <p class="text-muted text-center"><img src="{% static 'icons/email.png' %}" style="width: 20px; margin-right: 5px; margin-bottom: 3px;">{{ user.studentprofile.email }}</p>
+          <p class="card-text">"{{ user.studentprofile.bio }}"</p>
+          {% endif %}
               <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
                   <a class="nav-link " href="{% url 'profile:student-profile' %}">Info</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link " href="{% url 'profile:student-create-profile' %}">About Me</a>
+                  <a class="nav-link " href="{% url 'profile:student-profile-about' %}">About Me</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'profile:student-taken-exams' %}">Taken Exams</a>
@@ -89,3 +90,4 @@
 {% endif %}
 {% include 'footer.html' %}
 {% endblock %}
+
